--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Sofia Angela Suarez | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Sofia Angela Suarez | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Sofia Angela Suarez." width="200">
+        <p>Hi! My name is Sofia and I'm from Mar del Plata, Buenos Aires, Argentina.
+            I'm a student of BYU-I that loves technology and everything related to it.
+            There are so many things I like to do, but one of my favorite ones is to write novels.
+            I also love music and learn new things. I'm so excited for this course!</p>
+    </main>
+    <footer>
+        <p>©2025 ◈ Sofia Angela Suarez ◈ Buenos Aires, Argentina</p>
+    </footer>
 </body>
+
 </html>
