--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name="description" content="A basic HTML structure example using semantic HTML elements">
+    <meta name="author" content="Sofia Angela Suarez">
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/basic-logo.png" alt="A simple logo of a screen with some codes." width="128" height="128">
+    </header>
+    <nav>
+        <ul>
+            <li><a href="https://www.familysearch.org/es/global">Family Search Website</a></li>
+            <li><a href="https://www.byupathway.edu/">BYU Pathway Worldwide</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Basic HTML Structure</h1>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, cupiditate.</p>
+        </section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, ut.</p>
+        </section>
+    </main>
+    <aside>
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/rome-italy/2019/800x500/2-Rome-Temple-2190090.jpg"
+            alt="The Italy Rome Temple" width="200">
+    </aside>
+    <footer>
+        <p>Sofia Angela Suarez</p>
+    </footer>
 </body>
+
 </html>
