--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sofia Angela Suarez | WDD 130</title>
+    <meta name="description" content="My first own page, designed as a project for the course called Web Fundamentals.">
+    <meta name="author" content="Sofia Angela Suarez">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -23,6 +25,14 @@
             There are so many things I like to do, but one of my favorite ones is to write novels.
             I also love music and learn new things. I'm so excited for this course!</p>
     </main>
+    <aside>
+        <h2>Argentina</h2>
+        <img src="images/buenos-aires-argentina.jpg" alt="The capital city of Argentina, Buenos Aires.">
+        <p>Argentina is a vast South American country known for its diverse landscapes, from the Andes Mountains to the
+            Pampas plains and Patagonia. It's rich in culture, with a strong European influence, world-renowned tango,
+            and
+            passionate football fans. The capital, Buenos Aires, is a vibrant hub of art, cuisine, and nightlife.</p>
+    </aside>
     <footer>
         <p>©2025 ◈ Sofia Angela Suarez ◈ Buenos Aires, Argentina</p>
     </footer>
