--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sofia Angela Suarez | WDD 130</title>
-    <meta name="description" content="My first own page, designed as a project for the course called Web Fundamentals.">
+    <meta name="description" content="My first own page, designed as a project for the course called Web Fundamentals. The purpose is to provide some information
+    about myself and where I am from.">
     <meta name="author" content="Sofia Angela Suarez">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
@@ -27,7 +28,7 @@
     </main>
     <aside>
         <h2>Argentina</h2>
-        <img src="images/buenos-aires-argentina.jpg" alt="The capital city of Argentina, Buenos Aires.">
+        <img src="images/bsas-argentina.jpg" alt="The capital city of Argentina, Buenos Aires.">
         <p>Argentina is a vast South American country known for its diverse landscapes, from the Andes Mountains to the
             Pampas plains and Patagonia. It's rich in culture, with a strong European influence, world-renowned tango,
             and
