--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,15 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>White Water Rafting</title>
+    <title>About Us - Rafting Adventures</title>
     <meta name="description" content="A page that provides the information about a white water rafting company.">
     <meta name="author" content="Sofia Angela Suarez">
     <link rel="stylesheet" href="styles/rafting.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
-        rel="stylesheet">
 </head>
 
 <body>
@@ -53,13 +48,13 @@
         <p>©2025 | Rafting Adventure | Sofia Angela Suarez</p>
         <nav class="socialmedia">
             <a href="https://facebook.com">
-                <img src="images/facebook-logo.svg" alt="Facebook Icon" width="50px">
+                <img src="images/facebook-logo.svg" alt="Facebook Icon" width="50">
             </a>
             <a href="https://linkedin.com">
-                <img src="images/linkedin-logo.svg" alt="LinkedIn Icon" width="50px">
+                <img src="images/linkedin-logo.svg" alt="LinkedIn Icon" width="50">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram-logo.svg" alt="Instagram Icon" width="50px">
+                <img src="images/instagram-logo.svg" alt="Instagram Icon" width="50">
             </a>
         </nav>
     </footer>
