--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Rafting Adventures</title>
-    <meta name="description" content="A page that provides the information about a white water rafting company.">
+    <meta name="description" content="The informative page about the Rafting Adventures Company.">
     <meta name="author" content="Sofia Angela Suarez">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
