--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- 16 September 2025 -->
+<!-- 23 September 2025 -->
 <!DOCTYPE html>
 <html lang="en-US">
 
@@ -15,41 +15,47 @@
 <body>
     <header>
         <nav>
-            <a href="#">Home</a>
-            <a href="wwr/">Rafting Website</a>
-            <a href="https://www.linkedin.com/in/sofíaasuárez784">Profile</a>
-            <a href="https://facebook.com">Facebook</a>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="wwr/">Rafting Website</a></li>
+                <li><a href="https://www.linkedin.com/in/sofíaasuárez784">Profile</a></li>
+                <li><a href="https://facebook.com">Facebook</a></li>
+            </ul>
         </nav>
     </header>
-    <main>
-        <h1>Sofia Angela Suarez | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Sofia Angela Suarez." width="200">
-        <p>Hi! My name is Sofia and I'm from Mar del Plata, Buenos Aires, Argentina.
-            I'm a student of BYU-I that loves technology and everything related to it.
-            There are so many things I like to do, but one of my favorite ones is to write novels.
-            I also love music and learn new things. I'm so excited for this course!
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt quas consequuntur, rem quam animi non,
-            corporis assumenda porro adipisci dignissimos repellendus, minima qui quo nobis. Consequuntur itaque
-            temporibus architecto magni.</p>
-        <ul class="box indent">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/rome-italy-temple" target="_blank">Rome
-                    Italy Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/washington-d.c.-temple"
-                    target="_blank">Washington D.C. Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/tokyo-japan-temple" target="_blank">Tokyo
-                    Japan Temple</a></li>
-        </ul>
-    </main>
-    <aside class="box">
-        <h2>Argentina</h2>
-        <img src="images/bsas-argentina.jpg" alt="The capital city of Argentina, Buenos Aires.">
-        <p>Argentina is a vast South American country known for its diverse landscapes, from the Andes Mountains to the
-            Pampas plains and Patagonia. It's rich in culture, with a strong European influence, world-renowned tango,
-            and
-            passionate football fans. The capital, Buenos Aires, is a vibrant hub of art, cuisine, and nightlife.</p>
-    </aside>
+    <div class="grid">
+        <main>
+            <h1>Sofia Angela Suarez | WDD 130</h1>
+            <img src="images/profile.jpg" alt="Sofia Angela Suarez." width="200">
+            <p>Hi! My name is Sofia and I'm from Mar del Plata, Buenos Aires, Argentina.
+                I'm a student of BYU-I that loves technology and everything related to it.
+                There are so many things I like to do, but one of my favorite ones is to write novels.
+                I also love music and learn new things. I'm so excited for this course!
+            </p>
+            <ul class="box indent">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/rome-italy-temple" target="_blank">Rome
+                        Italy Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/washington-d.c.-temple"
+                        target="_blank">Washington D.C. Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/tokyo-japan-temple"
+                        target="_blank">Tokyo
+                        Japan Temple</a></li>
+            </ul>
+        </main>
+        <aside class="box">
+            <h2>Argentina</h2>
+            <img src="images/bsas-argentina.jpg" alt="The capital city of Argentina, Buenos Aires.">
+            <p>Argentina is a vast South American country known for its diverse landscapes, from the Andes Mountains to
+                the
+                Pampas plains and Patagonia. It's rich in culture, with a strong European influence, world-renowned
+                tango,
+                and
+                passionate football fans. The capital, Buenos Aires, is a vibrant hub of art, cuisine, and nightlife.
+            </p>
+        </aside>
+    </div>
     <footer>
-        <p>©2025 ◈ Sofia Angela Suarez ◈ Buenos Aires, Argentina</p>
+        <p>©2025 ◈ Sofia Angela Suarez ◈ Argentina</p>
     </footer>
 </body>
 
