--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,8 +12,8 @@
 
 <body>
     <header>
-        <img src="images/rafting-logo.png" alt="Whitewater Rafting Logo">
-        <nav>
+        <img src="images/rafting-logo-2.png" alt="Whitewater Rafting Logo">
+        <nav class="menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
@@ -34,14 +34,40 @@
                     Temporibus, laudantium fuga.</p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium enim quam rerum sapiente sit minima
                 eius doloribus, deleniti quos quis impedit sequi soluta blanditiis cupiditate aliquid nihil excepturi
                 deserunt at.</p>
+            <img src="images/river1.jpg" alt="A raft in a river">
+            <p class="second">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium enim quam rerum
+                sapiente
+                sit minima
+                eius doloribus, deleniti quos quis impedit sequi soluta blanditiis cupiditate aliquid nihil excepturi
+                deserunt at.</p>
         </section>
-        <section>
+        <section class="adventure">
             <h2>Adventure Awaits You!</h2>
+            <figure>
+                <img src="images/rafting_adv_1.jpg" alt="...">
+                <figcaption>Yellow River</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting_adv_2.jpg" alt="...">
+                <figcaption>Woods Adventure</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting_adv_3.jpg" alt="...">
+                <figcaption>Mountains Rapids</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting_adv_4.jpg" alt="...">
+                <figcaption>The Big River</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting_adv_5.jpg" alt="...">
+                <figcaption>Through The Fells</figcaption>
+            </figure>
         </section>
     </main>
     <footer>
