--- a/wwr/about.html
+++ b/wwr/about.html
@@ -49,23 +49,23 @@
         <section class="adventure">
             <h2>Adventure Awaits You!</h2>
             <figure>
-                <img src="images/rafting_adv_1.jpg" alt="...">
+                <img src="images/rafting_adv_1.jpg" alt="A yellow raft in a river">
                 <figcaption>Yellow River</figcaption>
             </figure>
             <figure>
-                <img src="images/rafting_adv_2.jpg" alt="...">
+                <img src="images/rafting_adv_2.jpg" alt="A group of rafts">
                 <figcaption>Woods Adventure</figcaption>
             </figure>
             <figure>
-                <img src="images/rafting_adv_3.jpg" alt="...">
+                <img src="images/rafting_adv_3.jpg" alt="A raft in a stretch river">
                 <figcaption>Mountains Rapids</figcaption>
             </figure>
             <figure>
-                <img src="images/rafting_adv_4.jpg" alt="...">
+                <img src="images/rafting_adv_4.jpg" alt="A raft in a big river">
                 <figcaption>The Big River</figcaption>
             </figure>
             <figure>
-                <img src="images/rafting_adv_5.jpg" alt="...">
+                <img src="images/rafting_adv_5.jpg" alt="River and fells">
                 <figcaption>Through The Fells</figcaption>
             </figure>
         </section>
